tests/ui/binop/let-chain-type-issue-147665.stderr
error[E0308]: mismatched types
  --> $DIR/let-chain-type-issue-147665.rs:5:21
   |
LL |     if let x = 1 && 2 {}
   |                     ^ expected `bool`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
